--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -9,16 +9,17 @@
     <title>sish</title>
 
     <!-- Bootstrap Start -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="static/jquery-3.3.1.min.js"></script>
+    <script src="static/popper.min.js"></script>
+    <script src="static/bootstrap.bundle.min.js"></script>
 
-    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="static/bootstrap.min.css" rel="stylesheet">
+    <link href="static/font-awesome.min.css" rel="stylesheet">
+    <link rel="icon" type="image.x-icon" href="static/favicon.ico"/>
     <!-- Bootstrap End -->
 
     <!-- Knockout Start -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
+    <script src="static/knockout-latest.js"></script>
     <!-- Knockout End -->
 
     <style>
@@ -28,6 +29,20 @@
 
         .navbar {
             max-height: 60px !important
+        }
+
+        .filter {
+            display: flex;
+        }
+
+        .btn-danger, .btn-info, .btn-primary {
+            text-transform: none;
+            color: white !important;
+            height: 34px;
+        }
+
+        .filter h2 {
+            flex: auto;
         }
     </style>
 
