--- a/docs/tmpl/base.layout.tmpl
+++ b/docs/tmpl/base.layout.tmpl
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>{{template "title" .}}</title>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="ngrok, sish, ssh, tunnel, self-hosted" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
