--- a/docs/tmpl/sitemap-footer.partial.tmpl
+++ b/docs/tmpl/sitemap-footer.partial.tmpl
@@ -1,17 +1,31 @@
 {{define "sitemap-footer"}}
 <div class="sitemap text-sm mb-4">
-{{range .Sitemap.Children -}}
-  <div>
-  {{- if (and $.Prev (eq $.Prev.GenHref .GenHref)) -}}
-  <a href="{{.GenHref}}" class="link-alt-adj">{{.Text}}</a>
-  {{- else if (and $.Next (eq $.Next.GenHref .GenHref)) -}}
-  <a href="{{.GenHref}}" class="link-alt-adj">{{.Text}}</a>
-  {{- else if (eq $.Href .GenHref) -}}
-  <a href="{{.GenHref}}" class="link-alt-hover">{{.Text}}</a>
-  {{- else -}}
-  <a href="{{.GenHref}}" class="link-alt">{{.Text}}</a>
-  {{- end -}}
-  </div>
-{{- end}}
+  <ul class="list-none sidebar-list">
+  {{range .Sitemap.Children}}
+    {{if .Href}}
+    <li class="text-md">
+      {{if (eq $.Href .GenHref)}}
+      <a href="{{.GenHref}}" class="link-alt-hover">{{.Text}}</a>
+      {{else}}
+      <a href="{{.GenHref}}" class="link-alt">{{.Text}}</a>
+      {{end}}
+    </li>
+    {{else}}
+    <li class="text-md">{{.Text}}</li>
+    {{end}}
+
+    {{range .Children}}
+      <ul class="list-none sidebar-list">
+        <li>
+          {{if (eq $.Href .GenHref)}}
+          <a href="{{.GenHref}}" class="link-alt-hover">{{.Text}}</a>
+          {{else}}
+          <a href="{{.GenHref}}" class="link-alt">{{.Text}}</a>
+          {{end}}
+        </li>
+      </ul>
+    {{end}}
+  {{end}}
+  </ul>
 </div>
 {{end}}
