--- a/docs/tmpl/post.page.tmpl
+++ b/docs/tmpl/post.page.tmpl
@@ -20,27 +20,7 @@
       {{.Data.Html}}
     </article>
 
-    <div class="flex justify-between gap-2 my-4">
-      {{if .Prev}}
-        <div class="pager max-w-half flex items-center">
-          <div class="flex flex-col items-start">
-            <div class="text-sm font-grey-light">&lt;&lt; PREV</div>
-            <a href="{{.Prev.GenHref}}" class="text-xl link-alt-adj">{{.Prev.Text}}</a>
-          </div>
-        </div>
-      {{end}}
-
-      {{if .Next}}
-        <div class="pager max-w-half flex items-center justify-end">
-          <div class="flex flex-col items-end">
-            <div class="text-sm font-grey-light">
-              NEXT &gt;&gt;
-            </div>
-            <a href="{{.Next.GenHref}}" class="text-xl align-right link-alt-adj">{{.Next.Text}}</a>
-          </div>
-        </div>
-      {{end}}
-    </div>
+    {{template "pager" .}}
   </main>
 
   {{template "sitemap-footer" .}}
