--- a/docs/tmpl/base.layout.tmpl
+++ b/docs/tmpl/base.layout.tmpl
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="ngrok, sish, ssh, tunnel, self-hosted" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link href="/logo.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/logo.png" rel="icon" sizes="any" type="image/png"/>
     <link rel="stylesheet" href="https://pico.sh/syntax.css" />
     <link rel="stylesheet" href="https://pico.sh/smol.css" />
     <link rel="stylesheet" href="/main.css" />
