--- a/docs/tmpl/home.page.tmpl
+++ b/docs/tmpl/home.page.tmpl
@@ -15,7 +15,7 @@
     <div class="flex items-center justify-center hero">
       <div class="flex flex-col items-center gap-2">
         <h1 class="logo-header text-2xl">sish</h1>
-        <div class="text-center text-lg">Access localhost using https</div>
+        <div class="text-center text-lg">Host public web services on localhost</div>
         <a href="/getting-started" class="btn-link">GET STARTED</a>
       </div>
     </div>
@@ -39,7 +39,7 @@
         <h2 class="m-0 p-0 text-lg">
           Fully managed service <a href="https://tuns.sh">tuns.sh</a>
         </h2>
-        <p>We also manage an instance of <code>sish</code> so users don't have to worry about managing it.</p>
+        <p>We also manage an instance of <code>sish</code> so you can start using it immediately.</p>
       </div>
     </article>
 
