--- a/docs/tmpl/nav.partial.tmpl
+++ b/docs/tmpl/nav.partial.tmpl
@@ -1,6 +1,6 @@
 {{define "nav"}}
 <nav class="mk-nav">
-  <div class="flex items-center justify-center gap-2 text-md">
+  <div class="flex flex-wrap items-center justify-center gap-2">
     <a href="/" class="link-alt">
       sish
     </a>
