--- a/docs/tmpl/sitemap-footer.partial.tmpl
+++ b/docs/tmpl/sitemap-footer.partial.tmpl
@@ -1,31 +1,32 @@
 {{define "sitemap-footer"}}
-<div class="sitemap text-sm mb-4">
-  <ul class="list-none sidebar-list">
+  <ul class="sitemap list-none sidebar-list">
   {{range .Sitemap.Children}}
     {{if .Href}}
-    <li class="text-md">
-      {{if (eq $.Href .GenHref)}}
-      <a href="{{.GenHref}}" class="link-alt-hover">{{.Text}}</a>
-      {{else}}
-      <a href="{{.GenHref}}" class="link-alt">{{.Text}}</a>
-      {{end}}
-    </li>
+    <li>
+      <span class="font-bold">
+        {{if (eq $.Href .GenHref)}}
+        <a href="{{.GenHref}}" class="link-alt-hover">{{.Text}}</a>
+        {{else}}
+        <a href="{{.GenHref}}" class="link-alt">{{.Text}}</a>
+        {{end}}
+      </span>
     {{else}}
-    <li class="text-md">{{.Text}}</li>
+    <li>
+      <span class="font-bold">{{.Text}}</span>
     {{end}}
 
-    {{range .Children}}
-      <ul class="list-none sidebar-list">
-        <li>
-          {{if (eq $.Href .GenHref)}}
-          <a href="{{.GenHref}}" class="link-alt-hover">{{.Text}}</a>
-          {{else}}
-          <a href="{{.GenHref}}" class="link-alt">{{.Text}}</a>
-          {{end}}
-        </li>
+      {{if .Children}}
+      <ul class="list-square sidebar-list">
+        {{range .Children}}
+          <li>
+            <a href="{{.GenHref}}" class="link-alt{{if (eq $.Href .GenHref)}}-hover{{end}}">
+              {{.Text}}
+            </a>
+          </li>
+        {{end}}
       </ul>
-    {{end}}
+      {{end}}
+    </li>
   {{end}}
   </ul>
-</div>
 {{end}}
